# rust-pdf

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  makerelease
examples/: circles.rs  mandala.rs  text.rs
src/: build_metrics.rs  canvas.rs  encoding.rs  fontmetrics.rs  fontref.rs  fontsource.rs  graphicsstate.rs  lib.rs  outline.rs  textobject.rs
tests/: lib.rs
