[package]
name = "pdf-canvas"
version = "0.6.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>",
	   "Rasmus Kaj <rasmus@krats.se>"]
license = "MIT"
description = """
Generate PDF files in pure Rust.
Currently, simple vector graphics and text set in the 14 built-in \
fonts are supported."""
documentation = "https://docs.rs/pdf-canvas"
repository = "https://github.com/kaj/rust-pdf"
readme = "README.md"

build = "src/build_metrics.rs"

[build-dependencies]
lazy_static = "0.2"

[dependencies]
lazy_static = "0.2"
time = "0.1"
