[package]
name = "pdf-canvas"
version = "0.7.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>",
	   "Rasmus Kaj <rasmus@krats.se>"]
license = "MIT"
description = """
Generate PDF files in pure Rust.
Currently, simple vector graphics and text set in the 14 built-in \
fonts are supported."""
categories = ["graphics"]
keywords = ["pdf", "graphics", "vector", "text"]
documentation = "https://docs.rs/pdf-canvas"
repository = "https://github.com/kaj/rust-pdf"
readme = "README.md"
edition = "2021"

build = "src/build_metrics.rs"

[build-dependencies]
lazy_static = "1.3"

[dependencies]
lazy_static = "1.3"
chrono = "0.4.19"

[badges.maintenance]
status = "passively-maintained"
